crates/keron-lang/tests/corpus/errors/check/forward_ref.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: unknown variable `two`
  --> 1:11
  |
1 | val one = two + 1
  |           ^^^
